fix: wrong paddings & image sizes on mobile layout

--- a/src/styles/desktop-layout.css
+++ b/src/styles/desktop-layout.css
@@ -141,4 +141,8 @@
     #page-cover img {
         width: var(--content-width);
     }
+
+    #page-description {
+        padding: 0;
+    }
 }
