--- a/src/styles/markdown-article.css
+++ b/src/styles/markdown-article.css
@@ -30,6 +30,7 @@ p:nth-child(2) {
 
 p:nth-child(2) img {
     width: var(--content-width);
+    max-width: var(--content-width);
 }
 
 ul {
